<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".myposts.MyPostsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout_mypost"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_my_post"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="100dp"
                app:srcCompat="@drawable/ic_add_photo_foreground" />

            <TextView
                android:id="@+id/txt_mypost_data"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginHorizontal="36dp"
                android:text="@string/my_post_data"
                android:textStyle="bold|italic"
                android:textColor="@color/secondary"/>

            <EditText
                android:id="@+id/txt_mypost_brand"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/my_post_brand"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:layout_marginHorizontal="36dp"
                android:layout_marginVertical="8dp"/>

            <EditText
                android:id="@+id/txt_mypost_fuel"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/my_post_fuel"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:layout_marginHorizontal="36dp"
                android:layout_marginVertical="8dp" />

            <EditText
                android:id="@+id/txt_mypost_change"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textAlignment="gravity"
                android:hint="@string/my_post_change"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:layout_marginHorizontal="36dp"
                android:layout_marginVertical="8dp" />

            <EditText
                android:id="@+id/txt_mypost_km"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textAlignment="gravity"
                android:hint="@string/my_post_km"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:layout_marginHorizontal="36dp"
                android:layout_marginVertical="8dp"
                android:inputType="number"/>

            <EditText
                android:id="@+id/txt_mypost_power"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textAlignment="gravity"
                android:hint="@string/my_post_power"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:layout_marginHorizontal="36dp"
                android:layout_marginVertical="8dp"
                android:inputType="number"/>

            <EditText
                android:id="@+id/txt_mypost_year"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textAlignment="gravity"
                android:hint="@string/my_post_year"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:layout_marginHorizontal="36dp"
                android:layout_marginVertical="8dp"
                android:inputType="date"/>

            <EditText
                android:id="@+id/txt_mypost_price"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textAlignment="gravity"
                android:hint="@string/my_post_price"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:layout_marginHorizontal="36dp"
                android:layout_marginVertical="8dp"
                android:inputType="numberDecimal"/>

            <EditText
                android:id="@+id/txtm_mypost_description"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginHorizontal="36dp"
                android:layout_marginVertical="8dp"
                android:gravity="start|bottom"
                android:hint="@string/my_post_description"
                android:inputType="textMultiLine"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <TextView
                android:id="@+id/txt_mypost_location"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginHorizontal="36dp"
                android:text="@string/my_post_location"
                android:textStyle="bold|italic"
                android:layout_marginTop="24dp"
                android:textColor="@color/secondary"/>

            <EditText
                android:id="@+id/txt_mypost_province"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textAlignment="gravity"
                android:hint="@string/my_post_province"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:layout_marginHorizontal="36dp"
                android:layout_marginVertical="8dp" />

            <EditText
                android:id="@+id/txt_mypost_city"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textAlignment="gravity"
                android:hint="@string/my_post_city"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:layout_marginHorizontal="36dp"
                android:layout_marginVertical="8dp" />

            <TextView
                android:id="@+id/txt_mypost_contact"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginHorizontal="36dp"
                android:text="@string/my_post_contact"
                android:textStyle="bold|italic"
                android:layout_marginTop="24dp"
                android:textColor="@color/secondary"/>

            <EditText
                android:id="@+id/txt_mypost_name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textAlignment="gravity"
                android:hint="@string/my_post_name"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:layout_marginHorizontal="36dp"
                android:layout_marginVertical="8dp"
                android:inputType="textPersonName"/>

            <EditText
                android:id="@+id/txt_mypost_phone"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textAlignment="gravity"
                android:hint="@string/my_post_phone"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:layout_marginHorizontal="36dp"
                android:layout_marginVertical="8dp"
                android:inputType="phone"/>

            <Button
                android:id="@+id/btn_mypost_topost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_round"
                android:text="@string/my_post_topost"
                android:textSize="20sp"
                android:layout_marginHorizontal="32dp"
                android:layout_marginVertical="8dp"/>

            <Button
                android:id="@+id/btn_mypost_delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_delete_round"
                android:text="@string/my_post_delete_topost"
                android:textSize="20sp"
                android:layout_marginHorizontal="32dp"
                android:layout_marginVertical="8dp"/>

        </LinearLayout>

    </ScrollView>

</FrameLayout>