<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/primary"
    android:layout_margin="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_item_star"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/backgrounds/scenic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="4dp">

            <TextView
                android:id="@+id/start_brand"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/start_brand"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginLeft="16dp"/>

            <TextView
                android:id="@+id/start_model"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/start_model"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginLeft="16dp"/>

            <TextView
                android:id="@+id/txt_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_price"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginLeft="170dp"
                android:layout_marginRight="16dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="4dp">

            <ImageView
                android:id="@+id/start_icon_location"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/ic_location_foreground"
                android:layout_marginLeft="16dp"/>

            <TextView
                android:id="@+id/txt_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_location"
                android:layout_marginLeft="16dp"
                />

            <TextView
                android:id="@+id/txt_province"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_province"
                android:layout_marginLeft="16dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="4dp"
            >

            <TextView
                android:id="@+id/txt_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_year"
                android:layout_marginLeft="16dp"
                />

            <TextView
                android:id="@+id/txt_fuel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_fuel"
                android:layout_marginLeft="16dp"
                />

            <TextView
                android:id="@+id/txt_change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_change"
                android:layout_marginLeft="16dp"
                />

        </LinearLayout>

    </LinearLayout>



</com.google.android.material.card.MaterialCardView>